Fix large intro text size on smaller screens

--- a/src/components/styles/home.module.css
+++ b/src/components/styles/home.module.css
@@ -11,14 +11,14 @@
   height: 100%;
 }
 .header h2 {
-  font-size: 150px;
+  font-size: 8rem;
   font-weight: 700;
   color: #fff;
   font-family: "Inter", sans-serif;
 }
 
 .intro {
-  transform: translate(30%, 5%);
+  transform: translate(18%, 5%);
 }
 
 .six {
